// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlackList Reducer add watchlist fail 1`] = `
Object {
  "incidents": Array [],
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
  "watchlistAddError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "watchlistAddPending": false,
}
`;

exports[`BlackList Reducer add watchlist pending 1`] = `
Object {
  "incidents": Array [],
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
  "watchlistAddError": null,
  "watchlistAddPending": true,
}
`;

exports[`BlackList Reducer add watchlist success 1`] = `
Object {
  "incidents": Array [],
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
  "watchlistAddError": null,
  "watchlistAddPending": false,
}
`;

exports[`BlackList Reducer get incident fail 1`] = `
Object {
  "incidentError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "incidentPending": false,
  "incidents": Array [],
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer get incident pending 1`] = `
Object {
  "incidentError": null,
  "incidentPending": true,
  "incidents": Array [],
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer get incident success 1`] = `
Object {
  "incident": Object {
    "fakeData": true,
  },
  "incidentError": null,
  "incidentPending": false,
  "incidents": Array [],
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list historical incidents fail 1`] = `
Object {
  "historicalIncidentsError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "historicalIncidentsPending": false,
  "incidents": Array [],
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list historical incidents pending 1`] = `
Object {
  "historicalIncidentsError": null,
  "historicalIncidentsPending": true,
  "incidents": Array [],
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list historical incidents success 1`] = `
Object {
  "historicalIncidents": Object {
    "fakeData": true,
  },
  "historicalIncidentsError": null,
  "historicalIncidentsPending": false,
  "incidents": Array [],
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list incidents fail 1`] = `
Object {
  "incidents": Array [],
  "incidentsError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list incidents for blacklist fail 1`] = `
Object {
  "incidents": Array [],
  "incidentsForBlacklistError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "incidentsForBlacklistPending": false,
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list incidents for blacklist pending 1`] = `
Object {
  "incidents": Array [],
  "incidentsForBlacklistError": null,
  "incidentsForBlacklistPending": true,
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list incidents for blacklist success 1`] = `
Object {
  "incidents": Array [],
  "incidentsForBlacklist": Object {
    "fakeData": true,
  },
  "incidentsForBlacklistError": null,
  "incidentsForBlacklistPending": false,
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list incidents for resource fail 1`] = `
Object {
  "incidents": Array [],
  "incidentsForResourceError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "incidentsForResourcePending": false,
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list incidents for resource pending 1`] = `
Object {
  "incidents": Array [],
  "incidentsForResourceError": null,
  "incidentsForResourcePending": true,
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list incidents for resource success 1`] = `
Object {
  "incidents": Array [],
  "incidentsForResource": Object {
    "fakeData": true,
  },
  "incidentsForResourceError": null,
  "incidentsForResourcePending": false,
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list incidents pending 1`] = `
Object {
  "incidents": Array [],
  "incidentsError": null,
  "incidentsPending": true,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list incidents success 1`] = `
Object {
  "incidents": Object {
    "fakeData": true,
  },
  "incidentsError": null,
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list monitors fail 1`] = `
Object {
  "incidents": Array [],
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list monitors pending 1`] = `
Object {
  "incidents": Array [],
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsError": null,
  "monitorsPending": true,
}
`;

exports[`BlackList Reducer list monitors success 1`] = `
Object {
  "incidents": Array [],
  "incidentsPending": false,
  "monitors": Object {
    "fakeData": true,
  },
  "monitorsError": null,
  "monitorsPending": false,
}
`;
